[gd_scene load_steps=5 format=3 uid="uid://dv7td75mgxyav"]

[ext_resource type="Script" uid="uid://dcgeupljj4fhc" path="res://scripts/main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://cmih33sbbkrbk" path="res://assets/textures/bg_ricefield3.png" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://bp5s3gyww4v7x" path="res://assets/textures/bg_cloud2.png" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://d4jkwtm3fvw4t" path="res://scenes/player.tscn" id="4_jyhfs"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Player" parent="." instance=ExtResource("4_jyhfs")]
position = Vector2(409, 630)

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(406, 632)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="RiceField" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 768)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/RiceField"]
texture = ExtResource("2_0xm2m")
offset = Vector2(432, 384)

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(10, 10)
motion_mirroring = Vector2(0, 768)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Clouds"]
texture = ExtResource("3_h2yge")
offset = Vector2(432, 384)

[node name="BulletsContainer" type="Node2D" parent="."]

[connection signal="bullets_shot" from="Player" to="." method="_on_player_bullets_shot"]
